--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
 
         <script src="https://unpkg.com/vue@next"></script>
         <script src="https://unpkg.com/primevue/inputtext/inputtext.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <title><%= htmlWebpackPlugin.options.title %></title>
     </head>
     <body>
